<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">Your recent screens appear here</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <plurals name="status_bar_accessibility_recent_apps">
        <item quantity="one">1 screen in Overview</item>
        <item quantity="other">%d screens in Overview</item>
    </plurals>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery is low</string>
    <string name="battery_low_percent_format"><xliff:g id="percentage">%s</xliff:g> remaining</string>
    <string name="battery_low_percent_format_saver_started"><xliff:g id="percentage">%s</xliff:g> remaining. Battery saver is on.</string>
    <string name="invalid_charger">USB charging not supported.\nUse only the supplied charger.</string>
    <string name="invalid_charger_title">USB charging not supported.</string>
    <string name="invalid_charger_text">Use only the supplied charger.</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on battery saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_network_name_separator" translatable="false">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app <xliff:g id="application">%1$s</xliff:g> to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app <xliff:g id="application">%1$s</xliff:g> to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open <xliff:g id="activity">%1$s</xliff:g> when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open <xliff:g id="activity">%1$s</xliff:g> when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n<xliff:g id="fingerprint">%1$s</xliff:g></string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="usb_debugging_secondary_user_message">The user currently signed in to this device can\'t turn on USB debugging. To use this feature, switch to the primary user.</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="screenshot_saving_ticker">Saving screenshot\u2026</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Tap to view your screenshot.</string>
    <string name="screenshot_failed_title">Couldn\'t capture screenshot.</string>
    <string name="screenshot_failed_to_save_unknown_text">Problem encountered while saving screenshot.</string>
    <string name="screenshot_failed_to_save_text">Can\'t save screenshot due to limited storage space.</string>
    <string name="screenshot_failed_to_capture_text">Taking screenshots isn\'t allowed by the app or
        your organization</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_voice">"Voice"</string>
    <string name="accessibility_camera">"DVR"</string>
    <string name="accessibility_camera_back">"DVR_back"</string>
    <string name="accessibility_settings">"Settings"</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_recent">Overview</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_voice_assist_button">Voice Assist</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="accessibility_waiting_for_fingerprint">Waiting for fingerprint</string>
    <string name="accessibility_unlock_without_fingerprint">Unlock without using your fingerprint</string>
    <string name="unlock_label">unlock</string>
    <string name="phone_label">open phone</string>
    <string name="voice_assist_label">open voice assist</string>
    <string name="camera_label">open camera</string>
    <string name="recents_caption_resize">Select new task layout</string>
    <string name="cancel">Cancel</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_name">Connected to <xliff:g id="wifi" example="Home Network">%s</xliff:g>.</string>
    <string name="accessibility_bluetooth_name">Connected to <xliff:g id="bluetooth" example="Car Audio">%s</xliff:g>.</string>
    <string name="accessibility_cast_name">Connected to <xliff:g id="cast" example="TV">%s</xliff:g>.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX two bars.</string>
    <string name="accessibility_wimax_three_bars">WiMAX three bars.</string>
    <string name="accessibility_wimax_signal_full">WiMAX signal full.</string>
    <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
    <string name="accessibility_ethernet_connected">Ethernet connected.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_zero_bars">Zero bars.</string>
    <string name="accessibility_one_bar">One bar.</string>
    <string name="accessibility_two_bars">Two bars.</string>
    <string name="accessibility_three_bars">Three bars.</string>
    <string name="accessibility_signal_full">Signal full.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="pop_wireless">Network</string>
    <string name="pop_screen_control">Screen</string>
    <string name="pop_other">Other</string>
    <string name="rb_close_screen">Screen out</string>
    <string name="rb_screen_saver">Screen saver</string>
    <string name="tv_screen_saver">Screen saver time</string>
    <string name="rb_always_bright">Light</string>
    <string name="adjust_brightness">Brightness</string>
    <string name="rb_time_1min">1min</string>
    <string name="rb_time_5min">5min</string>
    <string name="rb_time_30min">30min</string>
    <string name="setting_fm_switch">FM switch</string>
    <string name="adjust_volume">Volume</string>
    <string name="setting_day_and_night">Diurnal regulation</string>
    <string name="setting_day">Day</string>
    <string name="setting_night">Night</string>
    <string name="dvr_setting_gsensos_value">Collision sensitivity</string>
    <string name="dvr_setting_adas_value">ADAS sensitivity</string>
    <string name="dvr_value_high">High</string>
    <string name="dvr_value_low">Low</string>
    <string name="dvr_value_middle">Middle</string>
    <string name="dvr_value_close">Close</string>
    <string name="dvr_bt_pairing">Bluetooth</string>
    <string name="dvr_format_sd_card">Format</string>
    <string name="dvr_system_settings">Settings</string>
    <string name="setting_screen_auto">Auto</string>
    <string name="tv_screen_auto_close">Auto close screen</string>
    <string name="isguanji">>Do you want to shut down?</string>
    <string name="dontdown">Do not </string>
    <string name="downnow">shut down</string>
    <string name="dvr_setting_over_speed_value">超速提示</string>
    <string name="dvr_value_open">Open</string>
    <string name="dvr_setting_speed_camera_title">Speed camera</string>
    <string name="dvr_setting_smart_driver_title">Smart driving</string>
    <string name="dvr_setting_warning_time">Warning interval</string>
    <string name="dvr_setting_warning_mode">Warning mode</string>
    <string name="rb_time_10min">5min</string>
    <string name="rb_time_unlimited">unlimited</string>
    <string name="dvr_warning_mode_complete">Complete</string>
    <string name="dvr_warning_mode_picture">Picture</string>
    <string name="dvr_warning_mode_sound">Sound</string>
</resources>