<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bx_usb_bg"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/isguanji"
        android:textColor="#00BFFF"
        android:textSize="@dimen/top_center_text_size" />

    <TextView
        android:id="@+id/tv_downtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/double_bottom_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_dontdow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/dontdown"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/top_center_text_size" />

        <TextView
            android:id="@+id/btn_downnow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/downnow"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/top_center_text_size" />
    </LinearLayout>

</LinearLayout>