<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="match_parent"
    android:background="@drawable/circle_btn_white_bg"
    android:orientation="vertical"
    android:paddingHorizontal="28dp"
    android:paddingVertical="28dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/isguanji"
        android:textColor="#de000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_downtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:textColor="#666666"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_dontdow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dontdown"
            android:textColor="#e6654e"
            android:textSize="@dimen/double_bottom_text_size" />

        <TextView
            android:id="@+id/btn_downnow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/downnow"
            android:textColor="#e6654e"
            android:textSize="@dimen/double_bottom_text_size" />
    </LinearLayout>
</LinearLayout>